syntax = "proto3";

option csharp_namespace = "RapidTime.Frontend";

import "google/protobuf/empty.proto";

package contact;

service Contact{
  rpc GetContact (GetContactRequest) returns (ContactResponse);
  rpc GetAllContacts (google.protobuf.Empty) returns (MultiContactResponse);
  rpc UpdateContact (UpdateContactRequest) returns (google.protobuf.Empty);
  rpc CreateContact (CreateContactRequest) returns (ContactResponse);
  rpc DeleteContact (DeleteContactRequest) returns(google.protobuf.Empty);
  rpc AddContactToCustomer (AddContactToCustomerRequest) returns (ContactResponse);
}

message GetContactRequest{
  int32 id = 1;
}

message ContactResponse{
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string telephoneNumber = 4;
  int32 id = 5;
}

message UpdateContactRequest{
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string telephoneNumber = 4;
  int32 id = 5;
}

message CreateContactRequest{
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string telephoneNumber = 4;
}

message DeleteContactRequest{
  int32 id = 1;
}

message AddContactToCustomerRequest {
  int32 ContactId = 1;
  int32 CustomerId = 2;
}

message MultiContactResponse{
  repeated ContactResponse response = 1;
}